unpackaged/main/default/objects/Case/fields/Case_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Case_Picklist__c</fullName>
    <label>Case Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Benefit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>