unpackaged/main/default/objects/Case/fields/CaseTime__c.field-meta.xml
<CustomField>
    <fullName>CaseTime__c</fullName>
    <formula>Contact.Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseTime</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>