unpackaged/main/default/objects/Case/fields/Quantum__c.field-meta.xml
<CustomField>
    <fullName>Quantum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quantum</label>
    <type>Checkbox</type>
</CustomField>