unpackaged/main/default/objects/Case/listViews/myFirstQueue_Case.listView-meta.xml
<ListView>
    <fullName>myFirstQueue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>myFirstQueue</label>
    <queue>myFirstQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>